Succesfully running to github pages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfoliov2",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Callum-Anderson0.github.io/react-project-1",
+  "homepage": "https://callum-anderson0.github.io/React-Project-1/",
     
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
