--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://callum-anderson0.github.io/React-Project-1/",
-    
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -13,6 +12,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
     "react-typed": "^2.0.12",
     "web-vitals": "^2.1.4"
@@ -24,8 +24,7 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-  }
-  ,
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
